src/index.css
html, body {
  padding: 0;
  margin: 0;
  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
  width: 100%;
  height: 100%;
  overflow: hidden;
}

nav {
  display: block;
  height: 50px;
  text-align: center;
  background-color: #436F4D;
  width: 100%;
  position: absolute;
  top: 0;
  left: 0;
  z-index: 1;
}

nav h1, nav p {
  display: inline;
  color: #f0ffff;
}

#map {
  height: 50vh;
}

.list-section {
  height: 50%;
  width: 100%;
  position: absolute;
  top: 50%;
  left: 0;
  margin-left: 0;
  overflow: auto;
  background-color: rgb(236, 236, 236);
  overflow: auto;
  z-index: 1;
}

.list-section ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.list-section input {
  width: 90%;
  position: fixed;
}

.list-section ul li {
  font-size: 1.25em;
  border-bottom: 1.5px solid #CD2A3E;
  padding: 5px;
}

.list-section ul li:hover {
  cursor: pointer;
}

.app-container {
  display: flex;
  flex-direction: column-reverse;
}

.map-section {
  height: 50%;
  width: 100%;
  position: absolute;
  top: 0;
  left: 0;
}


@media only screen and (min-width:800px) {
  .app-container {
    height: calc(100vh - 50px);
  }
  .list-section input {
    width: 250px;
  }
  .app-container .list-section {
    width: 275px;
    top: 0;
    height: 100%;
    position: absolute;
  }
  .map-section {
    height: 100%;
  }
  #map {
    margin-left: 275px;
    height: 100%;
  }
}

